# vtuber-plot

./: .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  index.md  main.py  pyproject.toml
data/: filtered_vtubers.json  vtubers.json
data/DeepResearch/: 3年0組 郡道美玲の教室.html  A.I.Games.html  Aoi ch..html  Aqua Ch. 湊あくあ.html  Choco Ch. 癒月ちょこ.html  Choco subCh. 癒月ちょこ.html  ChroNoiR.html  Coco Ch. 桐生ココ.html  HAACHAMA Ch 赤井はあと.html  Hana Macchia Ch. NIJISANJI・.html  Kanae Channel.html  Kanata Ch. 天音かなた.html  Karma.html  Lamy Ch. 雪花ラミィ.html  Lui ch. 鷹嶺ルイ holoX.html  Matsuri Channel 夏色まつり.html  Mel Channel 夜空メルチャンネル.html  Met Channel 小森めと.html  Mika Melatika NIJISANJI・.html  Miko Ch. さくらみこ.html  Mio Channel 大神ミオ.html  Nakiri Ayame Ch. 百鬼あやめ.html  Nene Ch.桃鈴ねね.html  Nimi Nightmare.html  Nimu Ch..html  Noel Ch. 白銀ノエル.html  P-Pチャンネル.html  Patra Channel 周防パトラ.html  P丸様.html  P丸様。.html  ROF MAO ろふまおチャンネル.html  ROF-MAO ろふまおチャンネル【にじさんじ】.html  Rica Ch. 花宮莉歌.html  Roberu Ch. 夕刻ロベル.html  Roboco Ch. ロボ子.html  Rushia Ch. 潤羽るしあ.html  Sakuna Ch. 結城さくな.html  Suisei Channel.html  Tomari Mari channel 兎鞠まりちゃんねる.html  VOLTACTION.html  (+75 more)
data/SearchGPT/: .md  3SKM.md  3年0組 郡道美玲の教室.md  A.I.Games.md  AZKi Channel.md  Aisha Channel.md  Aisu Ch. 刺杉あいす.md  Akari ch.夢野あかり.md  Akuma Nihmune Ch.md  Aloe Ch.魔乃アロエ.md  Anna Channel 虎城アンナ ななしいんく.md  Annin Miru Channel.md  Aoi ch..md  Aqua Ch. 湊あくあ.md  Aruran Ch. アルランディス.md  Botan Ch.獅白ぼたん.md  Chloe ch. 沙花叉クロヱ holoX.md  Choco Ch. 癒月ちょこ.md  Choco subCh. 癒月ちょこ.md  Chris Channel 獅子王クリス ななしいんく.md  (+410 more)
prompts/: research.txt
src/: deep_research.py  gpt_search.py  label_v.py  plot.py  plot_plotly.py  plot_plotly_tsne.py  plot_tsne.py  prompt.py  sarashina_embedding.py  search_pixiv_dic.py  utils.py  vtuber.py
(+4302 files in other folders)
