[project]
name = "vtuber-plot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.9.4",
    "openai>=1.66.3",
    "protobuf>=6.30.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "selenium>=4.29.0",
    "sentence-transformers>=3.4.1",
    "sentencepiece>=0.2.0",
    "transformers>=4.49.0",
]

[project.optional-dependencies]
build = ["torch", "setuptools", "packaging"]
compile = ["flash-attn"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.6.3"
requires-dist = ["torch", "einops"]
